--- a/src/main/resources/templates/backend/hotel/hotelNewAdd.html
+++ b/src/main/resources/templates/backend/hotel/hotelNewAdd.html
@@ -18,12 +18,12 @@
 <body>
   <div class="container-scroller">
   
-    <nav th:replace="partials/fragment :: navbar"></nav>
+    <nav th:replace="backend/partials/fragment :: navbar"></nav>
     
     <div class="container-fluid page-body-wrapper">
     
-	  <div th:replace="partials/fragment :: setting"></div>
-      <nav th:replace="partials/fragment :: sidebar"></nav>
+	  <div th:replace="backend/partials/fragment :: setting"></div>
+      <nav th:replace="backend/partials/fragment :: sidebar"></nav>
       
       <!-- 主要內容 partial -->
       <div class="main-panel">
@@ -105,7 +105,7 @@
             </div>
           </div>
         </div>
-        <footer th:replace="partials/fragment :: footer"></footer>
+        <footer th:replace="backend/partials/fragment :: footer"></footer>
         <!-- partial -->
       </div>
     </div>
