--- a/src/main/resources/templates/backend/partials/fragment.html
+++ b/src/main/resources/templates/backend/partials/fragment.html
@@ -265,6 +265,12 @@
       <nav th:fragment="sidebar" class="sidebar sidebar-offcanvas" id="sidebar">
         <ul class="nav">
           <li class="nav-item">
+            <a class="nav-link" th:href="@{/backend/index}">
+              <i class="icon-bar-graph menu-icon"></i>
+              <span class="menu-title">統計圖表</span>
+            </a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" th:href="@{/members/list}">
               <i class="icon-head menu-icon"></i>
               <span class="menu-title">會員管理</span>
@@ -283,7 +289,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" th:href="@{/backend/index}">
+            <a class="nav-link" th:href="@{/backend/restaurant}">
               <i class="icon-flag menu-icon"></i>
               <span class="menu-title">餐廳管理</span>
             </a>
@@ -313,18 +319,8 @@
               <span class="menu-title">評論管理</span>
             </a>
           </li>
-<!--           <li class="nav-item"> -->
-<!--             <a class="nav-link" href="views/dashboard/comments.html"> -->
-<!--               <i class="icon-marquee-plus menu-icon"></i> -->
-<!--               <span class="menu-title">上架請求</span> -->
-<!--             </a> -->
-<!--           </li> -->
-          <li class="nav-item">
-            <a class="nav-link" th:href="@{/backend/charts}">
-              <i class="icon-bar-graph menu-icon"></i>
-              <span class="menu-title">統計圖表</span>
-            </a>
-          </li>
+
+
           <br>
 
         </ul>
