--- a/src/main/resources/templates/frontend/hotel-roomDetail.html
+++ b/src/main/resources/templates/frontend/hotel-roomDetail.html
@@ -5,16 +5,24 @@
 <script th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js}" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
 <head th:replace="frontend/partials/fragment :: head"></head>
 <style>
+
+	h1,h2,h3,h4,h5,h6{
+		line-height: 2;
+		font-family: 'Noto Sans TC', sans-serif;
+	}
+	p,a,span,li,label{
+		font-family: 'Open Sans', sans-serif;
+	}
 	#mainForFirst{
 		padding-top: 2vh;
 		margin-bottom: 1vh;
-		border-radius: 15px;
+		border-radius: 5px;
 		border: 1px rgb(221,223,226) solid;
 	}
 	#mainForSecond{
 		border: 1px rgb(221,223,226) solid;
-		border-radius: 15px;
-		margin-bottom: 1vh;
+		border-radius: 5px;
+		margin-bottom: 0vh;
 	}
 	 li{
 		display: inline;
@@ -24,27 +32,38 @@
 		padding-bottom: 0px;
 
 	}
-	 #left2{
-		 border: 1px rgb(221,223,226) solid;
-		 border-radius: 23px;
 
-	 } #right2{
-		 border: 1px rgb(221,223,226) solid;
-		 border-radius: 23px;
-
-	 }
-	#for-second-hight{
-		padding: 3vh 0vh 3vh 1vh;
-	}
 	#cheaproom{
 		background: orange;
 		width: 240px;
 		font-size: 20px;
-		border-radius: 15px;
+		border-radius: 5px;
 		color: white;
 	}
+	#btn1{
+		background: mediumpurple;
+		width: 125px;
+		color: white;
+		border-radius: 5px;
+		font-size: 20px;
+	}
+	#btn2{
+		background: lightcoral;
+		width: 125px;
+		color: white;
+		border-radius: 5px;
+		font-size: 20px;
+	}
+	#1icon{
+		margin-right: 10px;
+	}
+	#B ul  {
+		display: inline-flex;
+	}
 
-	
+
+
+
 
 
 </style>
@@ -207,8 +226,8 @@
 
 <!--		第二主要內容 簡介-->
 	<div class="container" id="mainForSecond">
-			<div class="row" id="for-second-hight">
-				<div class="col-md-8">
+			<div class="row border be-white p-2" >
+				<div class="col-md-8  mx-auto">
 					<ul >
 						<li>簡介</li>
 						<li>房型</li>
@@ -219,7 +238,7 @@
 					</ul>
 				</div>
 
-				<div class="col-md-4 text-right" style="display: flex" >
+				<div class="col-md-4 text-right"  >
 					  <button id="cheaproom" href="www.google.com">查看本間最特別房型</button>
 				</div>
 			</div>
@@ -228,41 +247,48 @@
 
 
 <!--			第三主要內容-->
-		<div class="container">
-			<div class="row gx-5">
-				<!--				中間主要內容 左半邊-->
-				<div class="col-8"  id="left2" >
-					<h1>這裡放飯店名稱</h1>
-					<h1>這裡放飯店名稱</h1>
-					<h1>這裡放飯店名稱</h1>
-
-				</div>
-				<!--				中間主要內容 右半邊-->
-
-				<div class="col-4" id="right2" >
-					<h1>這裡放評論</h1>
-					<h1>這裡放評論</h1>
-					<h1>這裡放評論</h1>
-				</div>
-
-			</div>
-		</div>
-
 	<div class="container">
 		<div class="row g-1">
-			<div class="col-8">
-				<div class="p-3 border bg-light">Custom column padding</div>
+				<div class="col-8" >
+					<div class="m-t-10 p-xl-3  border border-1 bg-white rounded" >
+						<button id="btn1" href="#">Top NO.1</button>
+						<button id="btn2" href="#">Gotrip </button><br>
+						<button id="btn1" href="#">Top NO.1</button>
+						<button id="btn2" href="#">Gotrip </button><br>
+						<button id="btn1" href="#">Top NO.1</button>
+						<button id="btn2" href="#">Gotrip </button><br>
+						<button id="btn1" href="#">Top NO.1</button>
+						<button id="btn2" href="#">Gotrip </button><br>
+
+					</div>
+				</div>
+				<div class="col-4" >
+					<div class="m-t-10 p-xl-3  border border-1 bg-white rounded">
+						<h1>這裡放評論</h1>
+					</div>
+				</div>
+		</div>
+
+		<div class="row g-1">
+			<div class="col-8" >
+				<div class="m-t-10 p-xl-3  border border-1 bg-white rounded"  id="B">
+					<h2>重點設施</h2>
+					<ul >
+						<li id="1icon" style="margin-right: 5vh;margin-left: 5vh"><img  th:src="@{/images/icons/location.svg}"><p>位於市中心</p></li>
+						<li id="2icon" style="margin-right: 5vh;margin-left: 5vh"><img  th:src="@{/images/icons/door.svg}"><p>快速入住/退房服務</p></li>
+						<li id="3icon" style="margin-right: 5vh;margin-left: 5vh"><img  th:src="@{/images/icons/like.svg}"><p>距離海灘近</p></li>
+						<li id="4icon" style="margin-right: 5vh;margin-left: 5vh"><img  th:src="@{/images/icons/location.svg}"><p>按摩浴池</p></li>
+					</ul>
+				</div>
 			</div>
-			<div class="col-4">
-				<div class="p-3 border bg-light">Custom column padding</div>
-			</div>
-			<div class="col-3">
-				<div class="p-3 border bg-light">Custom column padding</div>
-			</div>
-			<div class="col-9">
-				<div class="p-3 border bg-light">Custom column padding</div>
+			<div class="col-4" >
+				<div class="m-t-10 p-xl-3  border border-1 bg-white rounded">
+					<h1>這裡放評論</h1>
+				</div>
 			</div>
 		</div>
+
+
 	</div>
 
 
