--- a/src/main/resources/templates/frontend/ticket-detail.html
+++ b/src/main/resources/templates/frontend/ticket-detail.html
@@ -6,8 +6,7 @@
 <!-- <head> -->
 	<meta charset="UTF-8">
 	<!-- 方案選擇css -->
-	<link rel="stylesheet" th:href="@{/css/ticketTableStyle/style_plan.css}" href="../../static/css/ticketTableStyle/style_plan.css" >
-	<!-- 圖片css -->
+	<!-- <link rel="stylesheet" th:href="@{/css/ticketTableStyle/style_plan.css}" href="../../static/css/ticketTableStyle/style_plan.css" > -->
 	<link rel="stylesheet" th:href="@{/css/ticketTableStyle/jquery.skidder.css}" href="../../static/css/ticketTableStyle/jquery.skidder.css" >
 	<style type="text/css">
 
@@ -156,96 +155,57 @@
 		</div>
 	</div>
 
+<!-- 圖片路徑找位置中 -->
+	<!-- <section class="sec-product-detail bg0 p-t-40 p-b-45">
+		<div class="container">
+			<div class="row">
+
+			</div>
+		</div>
+	</section> -->
+
 	<!-- Image -->
 	<section class="sec-product-detail bg0 p-t-40 p-b-45">
 		<div class="container">
-			<div class="row">
-				<!--原 圖片路徑位置 -->
-				<!-- 圖片路徑找位置中 -->
-				
-				<!-- <div class="slideshow" style="height: 0; margin-top:15px;overflow: hidden">
-					<div class="slide"><img th:src="@{/images/tickets/Xpark_1.jpg}"></div>
-					<div class="slide"><img th:src="@{/images/tickets/Xpark_2.jpg}"></div>
-					<div class="slide"><img th:src="@{/images/tickets/Xpark_3.jpg}"></div>
-					<div class="slide"><img th:src="@{/images/tickets/Xpark_4.jpg}"></div>
-					<div class="slide"><img th:src="@{/images/tickets/Xpark_5.jpg}"></div>
-					<div class="slide"><img th:src="@{/images/tickets/Xpark_6.jpg}"></div>
-				</div> -->
-				<div class="col-md-8 col-lg-8 p-b-30">
-					<div class="p-l-25 p-r-30 p-lr-0-lg">
-						<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-							<div class="p-l-25 p-r-30 p-lr-0-lg">
+			<!-- <div class="row"> -->
+				<!-- <div class="col-md-8 col-lg-8 p-b-30"> -->
+					<!-- <div class="p-l-25 p-r-30 p-lr-0-lg"> -->
+						<!-- <div class="slideshow"> -->
+							<!-- <div class="p-l-25 p-r-30 p-lr-0-lg"> -->
+								<div class="slideshow" style="height: 500px; margin-top:15px;overflow: hidden">
+									<!-- 圖片可轉換 class="carousel-item active" -->
+									 <!-- <div class="carousel-item active">
+										<img th:src="@{/images/tickets/Xpark_1.jpg}"  class="d-block w-100" alt="...">
+									</div> -->
+									<div th:each="image:*{ticket.images}" class="slide">
+										<img th:src="@{${image}}" class="d-block w-100" alt="..."/>
+									</div>
+								</div>
 							<!-- 圖片下方橫槓 -->
-							<ol class="carousel-indicators">
+							<!-- <ol class="carousel-indicators">
 								<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
 								<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
 								<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
 								<li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
 								<li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
 								<li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
-							</ol>
-							<!-- 圖片+左右換圖 -->
-							<div class="carousel-inner">
-								<!-- 圖片可轉換 class="carousel-item active" -->
-								 <div class="carousel-item active">
-									<img th:src="@{/images/tickets/Xpark_1.jpg}"  class="d-block w-100" alt="...">
-								</div>
-
-								<div class="carousel-item">
-									<img th:src="@{/images/tickets/Xpark_2.jpg}" class="d-block w-100" alt="...">
-								</div>
-
-								<div class="carousel-item">
-									<img th:src="@{/images/tickets/Xpark_3.jpg}" class="d-block w-100" alt="...">
-								</div> -->
-								<div th:each="image:*{ticket.images}" class="carousel-item">
-									<img th:src="@{${image}}" class="d-block w-100" alt="..."/>
-								</div>
-
-								<!-- <div class="carousel-item">
-									<img th:src="@{/images/tickets/Xpark_4.jpg}" class="d-block w-100" alt="...">
-								</div>
-
-								<div class="carousel-item">
-									<img th:src="@{/images/tickets/Xpark_5.jpg}" class="d-block w-100" alt="...">
-								</div>
-
-								<div class="carousel-item">
-									<img th:src="@{/images/tickets/Xpark_6.jpg}" class="d-block w-100" alt="...">
-								</div> -->
-							</div>
+							</ol> -->
 
 							<!-- 左右選擇換圖 -->
-							<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button"
+							<!-- <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button"
 								data-slide="prev">
 								<span class="carousel-control-prev-icon" aria-hidden="true"></span>
 								<span class="sr-only">Previous</span>
-							</a>
-							
+							</a>							
 							<a class="carousel-control-next" href="#carouselExampleIndicators" role="button"
 								data-slide="next">
 								<span class="carousel-control-next-icon" aria-hidden="true"></span>
 								<span class="sr-only">Next</span>
-							</a>
-						</div>
-						<!-- <div class="m-t-20 " data-ride="carousel">
-							<button data-slide-to="0" class="active">
-								<img class="p-r-8 m-b-10" style="height: 80px;" th:src="@{/images/tickets/Xpark_1.jpg}"
-									alt="...">
-							</button>
-							<img class="p-r-8 m-b-10" style="height: 80px;" th:src="@{/images/tickets/Xpark_2.jpg}"
-								alt="...">
-							<img class="p-r-8 m-b-10" style="height: 80px;" th:src="@{/images/tickets/Xpark_3.jpg}"
-								alt="...">
-							<img class="p-r-8 m-b-10" style="height: 80px;" th:src="@{/images/tickets/Xpark_4.jpg}"
-								alt="...">
-							<img class="p-r-8 m-b-10" style="height: 80px;" th:src="@{/images/tickets/Xpark_5.jpg}"
-								alt="...">
-							<img class="m-b-10" style="height: 80px;" th:src="@{/images/tickets/Xpark_6.jpg}" alt="...">
-						</div> -->
-					</div>
-				</div>
-			</div>
+							</a> -->
+						<!-- </div> -->
+					<!-- </div> -->
+				<!-- </div> -->
+			<!-- </div> -->
 		</div>
 	</section>
 
@@ -266,7 +226,6 @@
 								<i class="fa fa-star cl1" aria-hidden="true"></i>
 								<span id="rating">4.6</span> (<span id="count">56</span>則評論)
 							</div>
-							<hr>
 							<div class="p-t-20">
 								<a href="#" class="fa fa-map-marker" aria-hidden="true"  th:text="${ticket.city}"></a>
 								<a href="#"class="fa fa-map-marker" aria-hidden="true"  th:text="${ticket.location}"></a>
@@ -295,7 +254,7 @@
 					</div>
 				</div>
 			<!-- </div> -->
-				<div class="col-md-4 p-b-30" style="margin-left:65%; height: 0px; bottom: 530px;">
+				<div class="col-md-4 p-b-30" style="margin-left:69%; height: 0px; bottom: 480px;">
 					<div class="p-t-5">
 						<span class="mtext-106 cl2 p-t-30">$</span>
 						<span class="mtext-106 cl2 p-t-30" th:text="${ticket.price}"></span>
@@ -330,8 +289,6 @@
 				</div>
 		</div>
 	</section>
-	
-	<!-- 測試 -->
 
 	<!-- 右側bar -->
 	<!-- <section>
@@ -497,7 +454,7 @@
 
 	<!-- 右側menu區塊 -->
 	<script th:src="@{/js/ticketTableJS/jquery.sticky-sidebar.min.js}" src="../../static/js/ticketTableJS/jquery.sticky-sidebar.min.js"></script>
-	<script th:src="@{/js/ticketTableJS/jquery.min.js}" src="../../static/js/ticketTableJS/jquery.min.js"></script>
+	<!-- <script th:src="@{/js/ticketTableJS/jquery.min.js}" src="../../static/js/ticketTableJS/jquery.min.js"></script> -->
 	<!-- <script src="js/jquery.sticky-sidebar.min.js"></script> -->
 	
 	<!-- Google Map -->
@@ -507,13 +464,13 @@
 	<!-- https://www.google.com/maps/embed/v1/place?key=AIzaSyCZCaVMqDRPK9FWi6p_yGx0iNbb7ATBLBw -->
 
 	<!-- 圖片JS -->
-	<script type="text/javascript" th:src="@{/js/ticketTableJS/jquery-1.11.0.min.js}" src="../../static/js/ticketTableJS/jquery-1.11.0.min.js"></script>
+	<!-- <script type="text/javascript" th:src="@{/js/ticketTableJS/jquery-1.11.0.min.js}" src="../../static/js/ticketTableJS/jquery-1.11.0.min.js"></script> -->
 	<script type="text/javascript" th:src="@{/js/ticketTableJS/imagesloaded.js}" src="../../static/js/ticketTableJS/imagesloaded.js"></script>
 	<script type="text/javascript" th:src="@{/js/ticketTableJS/smartresize.js}" src="../../static/js/ticketTableJS/smartresize.js"></script>
 	<script type="text/javascript" th:src="@{/js/ticketTableJS/jquery.skidder.js}" src="../../static/js/ticketTableJS/jquery.skidder.js"></script>
 	
 	<!-- announcement JS -->
-	<script th:src="@{/js/ticketTableJS/jquery.min.js}" src="../../static/js/ticketTableJS/jquery.min.js"></script>
+	<!-- <script th:src="@{/js/ticketTableJS/jquery.min.js}" src="../../static/js/ticketTableJS/jquery.min.js"></script> -->
 
 	<!-- announcement -->
 	<script type="text/javascript">
@@ -572,7 +529,7 @@
 	</script>
 
 	<!-- 圖片播放 -->
-	<!-- <script type="text/javascript">
+	<script type="text/javascript">
 		$('.slideshow').each( function() {
 			var $slideshow = $(this);
 			$slideshow.imagesLoaded( function() {
@@ -603,7 +560,7 @@
 		$(window).smartresize(function(){
 			$('.slideshow').skidder('resize');
 		});
-	</script> -->
+	</script>
 
 </body>
 
