--- a/src/main/resources/templates/frontend/car/car-detail.html
+++ b/src/main/resources/templates/frontend/car/car-detail.html
@@ -108,7 +108,7 @@
 				<div class="col-sm-10 col-md-8">
 					<div class="p-b-30 m-lr-15-sm">
 						<!-- Review -->
-						<div class="">
+						<div>
 							<h3 class="font-weight-bold">顧客評價</h3>
 							<div class="comments-itemId m-5" th:id="${option.id}" value="carRental"></div>
 						</div>
