--- a/src/main/resources/templates/frontend/hotel/hotel-roomList.html
+++ b/src/main/resources/templates/frontend/hotel/hotel-roomList.html
@@ -63,7 +63,7 @@
             <div class="col-md-9 grid-margin my-5 pl-5">
                 <div class="card">
                     <div class="card-body">
-                        <h4 class="card-title font-weight-bold">飯店＆房間列表</h4>
+                        <h4 class="card-title font-weight-bold">房間列表</h4>
                         <h6 class="card-title font-weight-bold">預計放房間</h6>
                         <div class="p-t-20">
                             <table id="data-table" class="display table table-hover w-100" style="text-align: center">
@@ -94,7 +94,7 @@
 
                                     </th>
                                     <th>
-                                        <a class="btn1" th:href="@{/getHotelRoomList(id=${hotel.id})}">查看房間</a>
+                                        <a class="btn1" th:href="@{/getHotelRoom(id=${hotel.id})}">查看房間</a>
 
                                     </th>
 
